--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,6 +8,7 @@
     margin: 0 auto;
     background: $bg-light;
     color: black;
+    transition: all 0.4s ease;
     .logo {
         display: flex;
         align-items: center;
@@ -62,9 +63,11 @@
                 border-radius: $br-20;
                 box-shadow: $new-box-shadow-low;
 
-                padding: 8px 10px;
+                padding: 3px 10px;
 
                 justify-content: center;
+                text-align: center;
+                align-items: center;
                 display: flex;
                 width: auto;
 
@@ -157,7 +160,7 @@
             // text-align: center;
             min-width: 300px;
             position: absolute;
-            top: -30vh;
+            top: -40vh;
             left: 0;
             right: 0;
             overflow: visible;
