--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,68 +1,61 @@
-
 //! --------------- Colors ---------------
 
 // Background Colors
-$bg-light: #f9f5f2;
-$home-bg:#000000;
-$about-bg:#1C1D24;
-$skill-bg: #262835;
-$proj-bg:#1C1D24;
-$contact-bg:rgb(225, 225, 225);
-$navbar-bg: #1c1d2434;
-$stk-nav-bg: #1c1d24;;
-$navbar-border:#513030;
 
- 
+$bg-light: #fff7ee;
+$bg-dark:rgb(83, 71, 71);
+$home-bg: #000000;
+$about-bg: #1c1d24;
+$skill-bg: #dddde1;
+$proj-bg: #1c1d24;
+$contact-bg: rgb(255, 255, 255);
+
 //text Colors
-$accent-color:#3F91F9;
-$accent400:rgba(220, 150, 90, 0.1);
+$accent-color: #3f91f9;
+$accent400: rgba(220, 150, 90, 0.1);
 $text-low: rgba(255, 255, 255, 0.721);
 
-$grad-main:rgb(159, 128, 70);
+$grad-main: rgb(159, 128, 70);
 
 //Shadows
 $box-shadow-low: 0 5px 15px rgba(0, 0, 0, 0.3);
 $box-shadow-high: 0 10px 10px rgba(111, 108, 108, 0.5);
 
-$card-box-shadow-low:5px 7px black; 
+$card-box-shadow-low: 5px 7px black;
 $card-box-shadow-high: 9px 12px black;
 
-$btn-box-shadow-low:3px 3px black;
+$btn-box-shadow-low: 3px 3px black;
 $btn-box-shadow-high: 5px 5px black;
 
 $new-box-shadow-low: 3px 3px rgb(0, 0, 0);
 $new-box-shadow-high: 5px 5px rgb(0, 0, 0);
 
 //border radius
-$bor-1:1px solid black;
-$bor-15:1.5px solid black;
-$bor-2:2px solid black;
+$bor-1: 1px solid black;
+$bor-15: 1.5px solid black;
+$bor-2: 2px solid black;
 
 //Shades
 $white-1000: #fff;
-$white-700:rgba(255, 255, 255, 0.799);
+$white-700: rgba(255, 255, 255, 0.799);
 $black-1000: black;
 $black-900: rgba(47, 45, 45, 0.902);
-$black-800:rgb(28, 29, 36);
+$black-800: rgb(28, 29, 36);
 $black-400: #656f87;
 $black-200: rgba(93, 72, 72, 0.166);
 $black-100: #f7f7f7;
 $black-alpha-100: rgba(0, 0, 0, 0.5);
-$yellow-1000:#F7CB45;
+$yellow-1000: #f7cb45;
 //Social-icons
 $linkedin: #0a66c2;
 $github: #171515;
-$instagram:radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+$instagram: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
 $whatsapp: rgb(4, 239, 4);
-
-
 
 //! --------------- Measurements ---------------
 
-
 //Border Radius
-$br-10:10px;
-$br-15:15px;
-$br-20:20px;
-$br-100:100%;
-
+$br-10: 10px;
+$br-15: 15px;
+$br-20: 20px;
+$br-100: 100%;
