--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,14 +1,23 @@
-@import '../../variables.scss';
+@import "../../variables.scss";
 
-.footer
-{ 
-    background: #2d2e3a;
+.footer {
+    background: #bbbdd4;
     overflow: hidden;
     box-sizing: border-box;
     padding: 12px 0px;
-    p
-    {
-        font-size: 20px;
-    
+    .row {
+        flex-direction: column;
+        text-align: center;
+        gap:10px;
+    }
+    .my-logo {
+        // background-color: red;
+        display: inline;
+        font-size: 22px;
+    }
+    .footer-txt {
+        p {
+            font-size: 20px;
+        }
     }
 }
