--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -1,126 +1,311 @@
 @import "../../variables";
+@import "../../index.scss";
 
 .home_cls {
-    background-color: #f9f5f2;
+    // background-color: $bg-light;
+    background-color: #fff7ee;
     min-height: 100vh;
     color: black;
 }
 
-.spiral {
-    position: absolute;
+.theme_tgl {
+    // background-color: red;
+    position: fixed;
+    right: 30px;
+    top: 60px;
+    z-index: 999;
+}  
+
+.home_cls .row {
+    // flex: 0 0 50%;
+    // background-color: gold;
+    padding: 20px;
+    // padding-top: 100px;
+    justify-content: center;
 }
-.home_cntr {
+.home_txt {
+    // background-color: rgb(174, 97, 97);
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    padding-top: 60px;
-
-    .rainbow {
-        transform: scale(0.2) rotate(40deg);
-        position: absolute;
-        top: 50px;
-        right: 20px;
-    }
-
-    .spiral {
-        transform: scale(0.2) rotate(-40deg);
-        position: absolute;
-        top: 50px;
-        left: 20px;
-    }
-}
-
-.home_txt {
-    padding-top: 60px;
+    flex: 100%;
+    padding: 20px;
+    padding-top: 80px;
     // background-color: red;
-    line-height: 4rem;
+    // line-height: 3rem;
 
     h3 {
-        font-size: 25px;
+        color: #686858;
+        margin-bottom: 16px;
+        font-size: 20px;
+        font-weight: 600;
+        // font-family: 'sans-serif';
+        // font-family: 'Courier New', Courier, monospace;
+        // line-height: 140%;
 
         span {
             font-size: 35px;
-            box-shadow: 10px 10px 10px solid black;
+            animation: wave-animation 2s infinite;
+            transform-origin: 70% 70%;
+            display: inline-block;
         }
     }
 
     h1 {
-        color: #ff5a34;
-        text-shadow: 2px 3px black;
-        font-size: 50px;
-        letter-spacing: 2px;
-        -webkit-text-stroke: 1px rgb(151, 80, 80);
-        text-transform: uppercase;
-        font-family: sans-serif;
-        font-weight: 900;
+        font-size: 4rem;
+        margin-bottom: 25px;
+        // font-weight: 900;
+        // font-family: 'sans-serif';
+
+        font-family: Graphik, sans-serif;
     }
 
     h2 {
-        margin-top: 10px;
-        font-size: 25px;
+        color: #000000a7;
+
+        margin-bottom: 20px;
+        font-size: 2rem;
+        font-weight: 600;
+        line-height: 2rem;
+
+        span1,
+        span2 {
+            // background-color: $yellow-1000;
+            // padding: 4px 26px;
+         
+            // box-shadow: $new-box-shadow-low;
+            border-radius: 40px;
+            text-align: center; /* Center the content horizontally */
+        
+
+            img {
+                width: 60px;
+                height: 60px;
+                display: inline-block; /* Display the images as inline-block */
+                vertical-align:middle; /* Vertically center the images */
+                animation: fadeIn 1s infinite; /* 2-second fade animation */
+                // filter: drop-shadow(5px 5px 1px #0000005f);
+                margin-bottom: 10px;
+
+                filter: drop-shadow(14px 14px 3px rgba(0, 0, 0, 0.3725490196));
+            }
+        }
+    }
+
+    h4 {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 140%;
+
+        span3 {
+            white-space: nowrap;
+            position: relative;
+            color: #fa8000;
+
+            &::after {
+                content: "";
+                white-space: nowrap;
+                // background-color: red;
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                background-image: url("../../assets/curved\ line.svg");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 100%;
+                height: 100%;
+                width: 100%;
+                margin-bottom: -1em;
+            }
+        }
     }
 }
 
-.resume_btn {
-    background-color: red;
-    height: 80px;
-    width: 80px;
-    border-radius: 100%;
-    position: absolute;
-    bottom: calc(100% - 83vh);
-    right: 80px;
+.btn_ctnr {
+    // cursor: pointer;
+    margin-top: 30px;
+    z-index: 2;
+    position: relative;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    a {
+        display: block;
+        color: #fff;
+        position: relative;
+        // text-decoration: none;
+        font-size: 1.1275rem;
+        font-weight: 600;
+        padding: 1rem 1.3rem;
+        border-radius: 30px;
+        background-color: #fa8000;
+        box-shadow: 4px 4px #000;
+        transition: all 0.3s ease-in-out;
 
-    border: 2px solid black;
-    font-size: 13px;
-    font-weight: 600;
-    animation: rotate 5s linear infinite;
+        cursor: pointer;
 
-    &::after {
-        font-family: "Font Awesome 5 Free";
-        content: "";
-        font-size: 19px;
-        z-index: 1;
-        // content: "";
-        height: 40px;
-        width: 40px;
-        background-color: #eeff7c;
-        border-radius: 50%;
-        position: absolute;
-    }
+        color: #fff;
 
-    li {
-        list-style: none;
-        position: absolute;
-        text-align: center;
-        transform: rotate(calc(30deg * var(--tm)));
-        inset: 1px;
-        color: white;
+        text-transform: capitalize;
+        background-color: #fa8000;
+        border: 2px solid transparent;
+        border-radius: 8rem;
+        
+        transition: all 0.2s ease-in-out;
+
+        &:hover {
+            border-radius: 15px;
+            border-color: #fa8000;
+            background-color: transparent;
+            color: #fa8000;
+            transform: scale(1.05);
+            // box-shadow: 5px 5px #000;
+        }
+
+        &:active {
+            box-shadow: 2px 2px #000;
+            // padding: .7rem 1rem;
+            // font-size: 0.5rem;
+            transform: scale(0.7);
+            border-radius: 8rem;
+        }
     }
 }
 
-@keyframes rotate {
+
+@keyframes wave-animation {
     0% {
         transform: rotate(0deg);
     }
+    10% {
+        transform: rotate(14deg);
+    } /* The following five values can be played with to make the waving more or less extreme */
+    20% {
+        transform: rotate(-8deg);
+    }
+    30% {
+        transform: rotate(14deg);
+    }
+    40% {
+        transform: rotate(-4deg);
+    }
+    50% {
+        transform: rotate(10deg);
+    }
+    60% {
+        transform: rotate(0deg);
+    } /* Reset for the last half to pause */
     100% {
-        transform: rotate(360deg);
+        transform: rotate(0deg);
     }
 }
 
-.quote_box {
+.curve_bg_cntnr {
+    overflow: hidden;
+    z-index: 1;
+    min-height: 34vw;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-    bottom: calc(100% - 90vh);
-    left: 50px;
-    padding: 10px;
-    z-index: 5;
-    // padding-bottom: 60px;
+    top: 90vh;
+    bottom: auto;
+    left: 0%;
+    right: 0%;
 
-    p {
-        font-size: 0.9rem;
-        font-weight: 400;
+    .curve_bg_text {
+        // background-color: red;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        position: absolute;
+        top: 0%;
+        bottom: 0%;
+        left: 0%;
+        right: 0%;
+
+        p {
+            line-height: 2.5rem;
+            font-size: 20px;
+            font-weight: 900;
+            padding: 10px 130px;
+            color: wheat;
+
+            span {
+                color: $accent-color;
+                font-weight: 900;
+            }
+
+            img {
+                width: 50px;
+                height: 50px;
+                // background-color: red;
+                // margin-top: -10px;
+                margin-bottom: -15px;
+
+                padding: 3px;
+            }
+            box1 {
+                // font-size: 44px;
+                // border: 2px  black;
+            }
+            box2 {
+                // font-size: 44px;
+            }
+            box3 {
+                // font-size: 44px;
+            }
+        }
+    }
+
+    .curve_bg_img {
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        background-image: url("/assets/curve_bg.svg");
+
+        background-position: 50%;
+        background-size: cover;
+        object-fit: scale-down;
+        background-repeat: no-repeat;
+        position: absolute;
+        top: 0%;
+        bottom: 0%;
+        left: 0%;
+        right: 0%;
     }
 }
+
+.star_icon1
+{
+  position: absolute;   
+}
+.curl_brac1
+{
+    position: absolute;
+    top:10px;
+}
+.curl_brac2
+{
+    position: absolute;
+    top:60vh;
+    right:10px;
+
+}
+
+// .quote_box {
+//     position: absolute;
+//     bottom: calc(100% - 90vh);
+//     left: 50px;
+//     padding: 10px;
+//     z-index: 5;
+//     // padding-bottom: 60px;
+
+//     p {
+//         font-size: 0.9rem;
+//         font-weight: 400;
+//     }
+// }
+
