--- a/src/components/Skills/SkillCom.scss
+++ b/src/components/Skills/SkillCom.scss
@@ -2,115 +2,87 @@
 @import "../../index.scss";
 
 .skill_cls {
-  background-color: $bg-light;
+  background-color: $skill-bg;
   // color: bl;
+  // z-index: -1;
+
+  z-index: 1;
+  
 }
 
-.c1 {
-  grid-area: c1;
-}
-.c2 {
-  grid-area: c2;
+// .skill_cls .card {
+//   padding: 0px 0px;
 
-  background-color: $yellow-1000;
 
-  &:hover {
-    background-color: $accent-color;
-  }
-}
-.c3 {
-  grid-area: c3;
-}
+//   .skill_heading {
+//     transition: all 0.3s ease-in-out;
+//     //  background-color: red;
+//     padding: 20px;
+//     h3 {
+//       font-size: 1.5rem;
+//       font-weight: 800;
+//       margin-bottom: 10px;
+//       transition: all 0.5s ease-in-out;
+//     }
 
-.grid {
-  display: grid;
-  grid-template-areas:
-    "c1 c2 c2"
-    "c1 c3 c3";
-  gap: 0px;
-  grid-template-columns: 1.1fr 1fr 1fr; /* Adjust the column widths here */
+//     p {
+//       // margin-bottom: 15px;
+//       transition: all 0.5s ease-in-out;
+//     }
+//   }
 
-}
+//   .skill_box {
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: space-evenly;
+//     border-radius: 5px;
+//     transition: all 0.5s ease-in-out;
 
-.skill_cls .card {
-  padding: 0px 0px;
+//     & > * {
+//       margin: 11px;
+//     }
 
-  // transition: all 3s ease-in-out;
+//     .skill_item {
+//       display: flex;
+//       flex-direction: column;
+//       gap: 7px;
 
-  .skill_heading {
-    transition: all 0.3s ease-in-out;
-    //  background-color: red;
-    padding: 20px;
-    h3 {
-      font-size: 1.5rem;
-      font-weight: 800;
-      margin-bottom: 10px;
-      transition: all 0.5s ease-in-out;
-    }
+//       img {
+//         height: 60px;
+//         width: 60px;
 
-    p {
-      // margin-bottom: 15px;
-      transition: all 0.5s ease-in-out;
-    }
-  }
+//         filter: drop-shadow(5px 5px 1px #0000005f);
+//         transition: all 0.2s ease-in-out;
 
-  .skill_box {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    border-radius: 5px;
-    transition: all 0.5s ease-in-out;
+//         &:hover {
+//           filter: drop-shadow(10px 10px 3px #0000009d);
+//           transform: translate(-3px, -3px) scale(1.08);
+//         }
+//         &:active {
+//           filter: drop-shadow(5px 5px 1px #0000005f);
+//           transform: translate(0px, 0px) scale(0.8);
+//         }
+//       }
+//       h5 {
+//         margin: auto;
+//       }
+//     }
+//   }
 
-    & > * {
-      margin: 11px;
-    }
+//   &:hover {
+//     .skill_heading {
+//       h3 {
+//         color: $white-1000;
+//         transition: all 0.5s ease-in-out;
+//       }
 
-    .skill_item {
-      display: flex;
-      flex-direction: column;
-      gap: 7px;
-
-      img {
-        height: 60px;
-        width: 60px;
-
-        filter: drop-shadow(5px 5px 1px #0000005f);
-        transition: all 0.2s ease-in-out;
-
-        &:hover {
-          filter: drop-shadow(10px 10px 3px #0000009d);
-          transform: translate(-3px, -3px) scale(1.08);
-        }
-        &:active {
-          filter: drop-shadow(5px 5px 1px #0000005f);
-          transform: translate(0px, 0px) scale(0.8);
-        }
-      }
-      h5 {
-        margin: auto;
-      }
-    }
-  }
-
-  &:hover {
-    .skill_heading {
-      h3 {
-        color: $white-1000;
-        transition: all 0.5s ease-in-out;
-      }
-
-      p {
-        color: $bg-light;
-      }
-    }
-  }
-}
+//       p {
+//         color: $bg-light;
+//       }
+//     }
+//   }
+// }
 
 @media (max-width: 768px) {
-  .grid {
-    grid-template-areas:
-      "c1 c1 c1"
-      "c2 c2 c2"
-      "c3 c3 c3";
-  }
+
 }
