proj-items added

--- a/src/components/About/AboutCom.scss
+++ b/src/components/About/AboutCom.scss
@@ -7,7 +7,7 @@
   background-color: $white-1000;
   // min-height: 150vh;
   color: black;
-  margin-top: 200px;
+  // margin-top: 0px;
 }
 
 .about_box {
