--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -187,12 +187,24 @@
       }
       .proj_links {
         transition: all 0.3s ease-in-out;
+
+        .gfg
+        {
+          
+          font-size: 2.5rem;
+        
+          text-align: center;
+          align-items: center;
+   
+        }
         a {
           color: $white-1000;
           display: inline-block;
+          align-items: center;
           font-size: 2rem;
           margin: 10px;
            font-weight: 900;
+          //  background-color: red;
           transition: all 0.3s ease-in-out;
 
         
@@ -245,9 +257,15 @@
       }
     }
     .proj_links {
+      .leetcode
+      {
+        transform: none;
+      }
       a:nth-child(1) {
+
         transform: rotate(-45deg);
       }
+      
     }
   }
 }
