--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -4,17 +4,32 @@
     background: #bbbdd4;
     overflow: hidden;
     box-sizing: border-box;
-    padding: 12px 0px;
+    padding: 5px 0px;
     .row {
         flex-direction: column;
         text-align: center;
-        gap:10px;
+        gap: 10px;
+        align-items: center;
     }
-    .my-logo {
+
+    .logo {
+        display: flex;
+        font-size: 17px;
+        text-align: center;
         // background-color: red;
-        display: inline;
-        font-size: 22px;
+        align-items: center;
+        align-content: center;
+        font-weight: 600;
+        
+
+
+        img {
+            height: 60px;
+            width: 100px;
+            margin-left: -10px;
+        }
     }
+
     .footer-txt {
         p {
             font-size: 20px;
